tests/paczka1/small_fuzzy/40413348.err
Error in line 5: hAYWBx A138 50,7
Error in line 6: ItOgu S675 79,9
Error in line 10: hAYWBx S6'5 21,1
Error in line 8: hAYWBx S675 11,9
Error in line 12: S675 A715 18,78
Error in line 7: WMIcCw A715 81,3
Error in line 13: S675 A715 25,4
